[metadata]
name = porrrtfolio
version = 0.1.1
install_requires = 
    pandas
    requests
    rich
    seaborn
    typer

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src

[options.extras_require]
dev =
    black
    coverage
    jupyterlab
    mkdocs
    mkdocstrings[python]
    mypy
    pytest
