[metadata]
name = porrrtfolio
version = 0.1.1

[options]
python_requires = >=3.10
install_requires = 
    pandas
    requests
    rich
    seaborn
    typer
packages = find:
package_dir =
    =src

[options.extras_require]
dev =
    black
    coverage
    jupyterlab
    mkdocs
    mkdocstrings[python]
    mypy
    pytest
